--- a/dark/my-theme.scss
+++ b/dark/my-theme.scss
@@ -1,60 +1,122 @@
 // Theme Colors
+//! Replace with our tokens
 // Must be hard-coded for Material mixins
-$primary-light: #92cbff; // --primaryLight
-$primary-light-hover: #92cbff4d; // --primaryLightHover
-$global-app-header: #172635; // --globalAppHeader
-$input-background: #ffffff; // --inputBackground
-$card-background: rgb(32, 50, 70); // --cardBackgroundColor
-$secondary-text: #d4d8dd; // --secondaryText
-$primary-dark: #3a87cf; // --primaryDark
-$list-selected: #1c3f5e; // -- Given by Daniel for List/Drawer selected background
-$table-header-background: $global-app-header;
+$color-global-secondary-300: #92cbff; // --primaryLight
+$primary-light-hover: #92cbff4d; // --primaryLightHover //! Opacity
+$color-global-tertiary-700: #172635; // --globalAppHeader
+$color-global-basics-white: #ffffff; // --inputBackground
+$card-background: rgb(32, 50, 70); // --cardBackgroundColor //! Not in tokens.
+$color-global-tertiary-100: #d4d8dd; // --secondaryText
+$color-global-secondary-600: #3a87cf; // --primaryDark
+$color-global-secondary-500: #4dacff;
+$color-global-tertiary-900: #080c11;
+$color-global-tertiary-800: #101923;
+$color-global-status-critical-500: #ff3838;
+$color-global-snowflakes-dark-surface: #1b2d3e;
+$color-global-snowflakes-dark-selected: #1c3f5e; // -- Given by Daniel for List/Drawer selected background
+$table-header-background: $color-global-tertiary-700;
 $table-row-hover-background: $primary-light-hover;
-$slider-track-background: $secondary-text;
-$slider-thumb-background: $primary-dark;
-$slider-thumb-border: $input-background;
+$input-background: $color-global-basics-white;
+$slider-track-background: $color-global-tertiary-100;
+$slider-thumb-background: $color-global-secondary-600;
+$slider-thumb-border: $color-global-basics-white;
 
 // These colors are used later with a $mdc-theme-* tag in front
 @use "@material/theme" with (
-  $primary: #4dacff, // --primary
-  $secondary: #4dacff, // --primary
-  $on-primary: #080c11, // --primaryElementText
-  $on-secondary: #ffffff, // --defaultText
-  $background: #101923, // --backgroundColor
-  $error: rgb(255, 56, 56), // --colorCritical
-  $on-error: #ffffff, // --defaultText
-  $surface: #1b2d3e, // --surfaceElements
-  $on-surface: #ffffff, // --defaultText
-);
+    $primary: $color-global-secondary-500,
+    // --primary $color-global-secondary-500
+    $secondary: $color-global-secondary-500,
+    // --primary $color-global-secondary-500
+    $on-primary: $color-global-tertiary-900,
+    // --primaryElementText $color-global-tertiary-900
+    $on-secondary: $color-global-basics-white,
+    // --defaultText $color-global-basics-white
+    $background: $color-global-tertiary-800,
+    // --backgroundColor
+    $error: $color-global-status-critical-500,
+    // --colorCritical
+    $on-error: $color-global-basics-white,
+    // --defaultText $color-global-basics-white
+    $surface: $color-global-snowflakes-dark-surface,
+    // --surfaceElements
+    $on-surface: $color-global-basics-white,
+    // --defaultText $color-global-basics-white
+  );
 
 // Typography styles
 @use "@material/typography" with (
-    $font-family: unquote("Roboto, sans-serif"),
-    $styles-headline1: (font-size: 2.125rem, letter-spacing: 0.25px, font-weight: normal),
-    $styles-headline2: (font-size: 1.5rem, font-weight: normal, letter-spacing: 0),
-    $styles-headline3: (font-size: 1.25rem, font-weight: 500, letter-spacing: 0.15px),
-    $styles-headline4: (font-size: 1.25rem, font-weight: 300, letter-spacing: 0.15px),
-    $styles-headline5: (font-size: 1.125rem, font-weight: normal, letter-spacing: 0),
-    $styles-headline6: (font-size: 1.125rem, font-weight: 300, letter-spacing: 0),
-    $styles-subtitle1: (font-size: 1rem, letter-spacing: 0.5px, font-weight: normal),
-    $styles-subtitle2: (font-size: 0.875rem, font-weight: normal, letter-spacing: 0.5px),
-    $styles-body1: (font-size: 1rem, letter-spacing: 0.5px, font-weight: normal),
-    $styles-body2: (font-size: 0.875rem, font-weight: normal, letter-spacing: 0.5px),
-    $styles-button: (
-      text-transform: none,
-      font-size: 1rem,
-      letter-spacing: 0.5px,
-      white-space: nowrap,
-      text-overflow: ellipsis,
-      font-weight: 400,
-    ),
-    $styles-caption: (letter-spacing: 0),
-    $styles-overline: (font-size: 0.75rem, font-weight: normal, letter-spacing: 0)
-  );
+  $font-family: unquote("Roboto, sans-serif"),
+  $styles-headline1: (
+    font-size: 2.125rem,
+    letter-spacing: 0.25px,
+    font-weight: normal,
+  ),
+  $styles-headline2: (
+    font-size: 1.5rem,
+    font-weight: normal,
+    letter-spacing: 0,
+  ),
+  $styles-headline3: (
+    font-size: 1.25rem,
+    font-weight: 500,
+    letter-spacing: 0.15px,
+  ),
+  $styles-headline4: (
+    font-size: 1.25rem,
+    font-weight: 300,
+    letter-spacing: 0.15px,
+  ),
+  $styles-headline5: (
+    font-size: 1.125rem,
+    font-weight: normal,
+    letter-spacing: 0,
+  ),
+  $styles-headline6: (
+    font-size: 1.125rem,
+    font-weight: 300,
+    letter-spacing: 0,
+  ),
+  $styles-subtitle1: (
+    font-size: 1rem,
+    letter-spacing: 0.5px,
+    font-weight: normal,
+  ),
+  $styles-subtitle2: (
+    font-size: 0.875rem,
+    font-weight: normal,
+    letter-spacing: 0.5px,
+  ),
+  $styles-body1: (
+    font-size: 1rem,
+    letter-spacing: 0.5px,
+    font-weight: normal,
+  ),
+  $styles-body2: (
+    font-size: 0.875rem,
+    font-weight: normal,
+    letter-spacing: 0.5px,
+  ),
+  $styles-button: (
+    text-transform: none,
+    font-size: 1rem,
+    letter-spacing: 0.5px,
+    white-space: nowrap,
+    text-overflow: ellipsis,
+    font-weight: 400,
+  ),
+  $styles-caption: (
+    letter-spacing: 0,
+  ),
+  $styles-overline: (
+    font-size: 0.75rem,
+    font-weight: normal,
+    letter-spacing: 0,
+  )
+);
 
 // Material Shape
 @use "@material/shape" with (
-    $small-component-radius: 3px,
-    $medium-component-radius: 3px,
-    $large-component-radius: 3px
+  $small-component-radius: 3px,
+  $medium-component-radius: 3px,
+  $large-component-radius: 3px
 );
