--- a/light/my-components.scss
+++ b/light/my-components.scss
@@ -7,12 +7,12 @@
   @include button.horizontal-padding(1rem);
   @include button.ink-color(
     (
-      hover: my-theme.$primary-dark,
-      disabled: rgba(my-theme.$primary-dark, 0.4),
+      hover: my-theme.$color-global-primary-600,
+      disabled: rgba(my-theme.$color-global-primary-600, 0.4),
     )
   );
   &:hover {
-    @include button.ink-color(my-theme.$primary-dark);
+    @include button.ink-color(my-theme.$color-global-primary-600);
   }
 }
 
@@ -26,7 +26,7 @@
   );
   @include button.container-fill-color(
     (
-      hover: my-theme.$primary-dark,
+      hover: my-theme.$color-global-primary-600,
       disabled: rgba($mdc-theme-primary, 0.4),
     )
   );
@@ -36,14 +36,14 @@
   @include button.ink-color(
     (
       default: $mdc-theme-primary,
-      hover: my-theme.$primary-dark,
+      hover: my-theme.$color-global-primary-600,
       disabled: rgba($mdc-theme-primary, 0.4),
     )
   );
   @include button.outline-color(
     (
       default: $mdc-theme-primary,
-      hover: my-theme.$primary-dark,
+      hover: my-theme.$color-global-primary-600,
       disabled: rgba($mdc-theme-primary, 0.4),
     )
   );
@@ -54,12 +54,12 @@ button.mdc-icon-button {
 
   &hover {
     background-color: transparent;
-    color: my-theme.$primary-dark;
+    color: my-theme.$color-global-primary-600;
   }
 }
 
 a.mdc-icon-button:hover {
-  color: my-theme.$primary-dark;
+  color: my-theme.$color-global-primary-600;
 }
 
 // ------------------ Checkbox -------------------
@@ -83,9 +83,9 @@ a.mdc-icon-button:hover {
 
   &:hover {
     @include checkbox.container-colors(
-      $unmarked-stroke-color: my-theme.$primary-dark,
-      $marked-fill-color: my-theme.$primary-dark,
-      $marked-stroke-color: my-theme.$primary-dark
+      $unmarked-stroke-color: my-theme.$color-global-primary-600,
+      $marked-fill-color: my-theme.$color-global-primary-600,
+      $marked-stroke-color: my-theme.$color-global-primary-600
     );
   }
 }
@@ -105,9 +105,9 @@ a.mdc-icon-button:hover {
   @include radio.disabled-ink-color(rgba($mdc-theme-primary, 0.4));
 
   &:hover {
-    @include radio.unchecked-stroke-color(my-theme.$primary-dark);
-    @include radio.checked-stroke-color(my-theme.$primary-dark);
-    @include radio.ink-color(my-theme.$primary-dark);
+    @include radio.unchecked-stroke-color(my-theme.$color-global-primary-600);
+    @include radio.checked-stroke-color(my-theme.$color-global-primary-600);
+    @include radio.ink-color(my-theme.$color-global-primary-600);
   }
 }
 
@@ -116,7 +116,9 @@ a.mdc-icon-button:hover {
 .mdc-switch {
   @include rtl.reflexive-box(margin, right, 20px);
   @include switch.toggled-on-track-color($mdc-theme-primary);
-  @include switch.toggled-off-track-color(my-theme.$secondary-text);
+  @include switch.toggled-off-track-color(
+    my-theme.$color-global-quaternary-800
+  );
 
   // Remove automatic opacity
   .mdc-switch__track {
@@ -138,13 +140,13 @@ a.mdc-icon-button:hover {
   &:not(.mdc-switch--checked) {
     .mdc-switch__thumb {
       background-color: $mdc-theme-on-primary;
-      border: 1px solid my-theme.$secondary-text;
+      border: 1px solid my-theme.$color-global-quaternary-800;
     }
   }
 
   &:hover {
     .mdc-switch__track {
-      background-color: my-theme.$primary-dark;
+      background-color: my-theme.$color-global-primary-600;
     }
   }
 }
@@ -158,11 +160,11 @@ a.mdc-icon-button:hover {
 
   @include top-app-bar.ink-color($mdc-theme-on-primary);
   @include top-app-bar.icon-ink-color(my-theme.$global-app-header-icon);
-  @include top-app-bar.fill-color(my-theme.$global-app-header);
+  @include top-app-bar.fill-color(my-theme.$color-global-tertiary-700);
 
   .mdc-top-app-bar__row {
     .mdc-icon-button:hover {
-      color: my-theme.$dark-theme-primary-light;
+      color: my-theme.$color-global-primary-400;
     }
   }
 
@@ -178,7 +180,7 @@ a.mdc-icon-button:hover {
   @include fab.ink-color($mdc-theme-on-primary);
 
   &:hover {
-    @include fab.container-color(my-theme.$primary-dark);
+    @include fab.container-color(my-theme.$color-global-primary-600);
   }
 }
 
@@ -254,8 +256,8 @@ a.mdc-icon-button:hover {
   );
   @include select.bottom-line-color(
     (
-      default: my-theme.$global-app-header,
-      hover: my-theme.$global-app-header,
+      default: my-theme.$color-global-tertiary-700,
+      hover: my-theme.$color-global-tertiary-700,
       focus: $mdc-theme-primary,
       disabled: rgba($mdc-theme-on-secondary, 0.4),
     )
@@ -283,7 +285,7 @@ a.mdc-icon-button:hover {
     .mdc-list {
       .mdc-list-item.mdc-list-item--selected {
         color: $mdc-theme-on-primary;
-        background-color: my-theme.$primary;
+        background-color: my-theme.$color-global-primary-500;
       }
       .mdc-list-item {
         color: $mdc-theme-on-secondary;
@@ -307,11 +309,11 @@ a.mdc-icon-button:hover {
   }
 
   &:hover {
-    @include chips.outline(2px, solid, my-theme.$primary-dark);
-    @include chips.ink-color(my-theme.$primary-dark);
-    @include chips.leading-icon-color(my-theme.$primary-dark);
+    @include chips.outline(2px, solid, my-theme.$color-global-primary-600);
+    @include chips.ink-color(my-theme.$color-global-primary-600);
+    @include chips.leading-icon-color(my-theme.$color-global-primary-600);
     .mdc-chip__checkmark-path {
-      stroke: my-theme.$primary-dark;
+      stroke: my-theme.$color-global-primary-600;
     }
   }
 }
@@ -325,8 +327,8 @@ a.mdc-icon-button:hover {
     @include chips.trailing-icon-color($mdc-theme-on-primary, 1);
 
     &:hover {
-      @include chips.fill-color(my-theme.$primary-dark);
-      @include chips.outline(2px, solid, my-theme.$primary-dark);
+      @include chips.fill-color(my-theme.$color-global-primary-600);
+      @include chips.outline(2px, solid, my-theme.$color-global-primary-600);
       @include chips.leading-icon-color($mdc-theme-on-primary);
     }
   }
@@ -366,7 +368,7 @@ a.mdc-icon-button:hover {
           // }
 
           &.mdc-list-item--activated {
-            background-color: my-theme.$primary;
+            background-color: my-theme.$color-global-primary-500;
             color: $mdc-theme-on-primary;
 
             .mdc-list-item__graphic {
@@ -445,7 +447,7 @@ a.mdc-icon-button:hover {
 
 .mdc-text-field:not(.mdc-text-field--disabled) + .mdc-text-field-helper-line {
   .mdc-text-field-helper-text {
-    color: my-theme.$secondary-text;
+    color: my-theme.$color-global-quaternary-800;
     text-align: start;
     font-size: 0.875rem;
     letter-spacing: 0.5px;
@@ -455,7 +457,7 @@ a.mdc-icon-button:hover {
 
 .mdc-text-field--disabled + .mdc-text-field-helper-line {
   .mdc-text-field-helper-text {
-    color: rgba(my-theme.$secondary-text, 0.4);
+    color: rgba(my-theme.$color-global-quaternary-800, 0.4);
     text-align: start;
     font-size: 0.875rem;
     letter-spacing: 0.5px;
@@ -655,17 +657,17 @@ a.mdc-icon-button:hover {
 
   // !! Applies to Drawer, Menu, List, and Select Menu
   .mdc-list-item:hover {
-    background-color: rgba(my-theme.$primary-dark, 0.2);
+    background-color: rgba(my-theme.$color-global-primary-600, 0.2);
   }
 
   .mdc-list-item--selected {
-    background-color: my-theme.$primary;
+    background-color: my-theme.$color-global-primary-500;
     @include list.item-secondary-text-ink-color(
       rgba($mdc-theme-on-primary, 0.8)
     );
 
     &:hover {
-      background-color: my-theme.$primary;
+      background-color: my-theme.$color-global-primary-500;
     }
   }
 
