--- a/light/my-layout.scss
+++ b/light/my-layout.scss
@@ -90,7 +90,7 @@ body {
   }
 
   .section-header a {
-    color: my-theme.$color-global-quaternary-800;
+    color: my-theme.$secondary-text;
 
     &:hover,
     &:focus {
