--- a/dark/my-theme.scss
+++ b/dark/my-theme.scss
@@ -2,6 +2,7 @@
 // Must be hard-coded for Material mixins
 @use '../node_modules/@astrouxds/design-tokens/dist/scss/colors-global' as tokens;
 @use '../node_modules/@astrouxds/design-tokens/dist/scss/colors-dark' as dark;
+@use '../node_modules/@astrouxds/design-tokens/dist/scss/variables' as typ-tokens;
 
 $primary-light: tokens.$color-global-secondary-300; // --primaryLight
 $primary-light-hover: rgba(dark.$color-hover, 0.302); // --primaryLightHover
@@ -15,6 +16,7 @@ $table-row-hover-background: $primary-light-hover;
 $slider-track-background: $secondary-text;
 $slider-thumb-background: $primary-dark;
 $slider-thumb-border: $input-background;
+
 
 // These colors are used later with a $mdc-theme-* tag in front
 @use "@material/theme" with (
@@ -30,79 +32,80 @@ $slider-thumb-border: $input-background;
 );
 
 // Typography styles
+
 @use "@material/typography" with (
   $font-family: unquote("Roboto, sans-serif"),
   $styles-headline1: (
-    font-size: 2.125rem,
-    letter-spacing: 0.25px,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-4xl,
+    letter-spacing: 0.25px, //! No valid token
+    font-weight: typ-tokens.$font-weight-regular, //This was normal, which equates to 400 
   ),
   $styles-headline2: (
-    font-size: 1.5rem,
-    font-weight: normal,
-    letter-spacing: 0,
+    font-size: typ-tokens.$font-size-2xl,
+    font-weight: typ-tokens.$font-weight-regular,
+    letter-spacing: typ-tokens.$letter-spacing-base,
   ),
   $styles-headline3: (
-    font-size: 1.25rem,
-    font-weight: 500,
-    letter-spacing: 0.15px,
+    font-size: typ-tokens.$font-size-xl,
+    font-weight: typ-tokens.$font-weight-medium,
+    letter-spacing: 0.15px, //! No exact token
   ),
   $styles-headline4: (
-    font-size: 1.25rem,
-    font-weight: 300,
-    letter-spacing: 0.15px,
+    font-size: typ-tokens.$font-size-xl,
+    font-weight: typ-tokens.$font-weight-light,
+    letter-spacing: 0.15px, //! No exact token
   ),
   $styles-headline5: (
-    font-size: 1.125rem,
-    font-weight: normal,
-    letter-spacing: 0,
+    font-size: typ-tokens.$font-size-lg,
+    font-weight: typ-tokens.$font-weight-regular,
+    letter-spacing: 0, //! No letter spacing token that is 0 - there are paragraph spacing ones
   ),
   $styles-headline6: (
-    font-size: 1.125rem,
-    font-weight: 300,
+    font-size: typ-tokens.$font-size-lg,
+    font-weight: typ-tokens.$font-weight-light,
     letter-spacing: 0,
   ),
   $styles-subtitle1: (
-    font-size: 1rem,
-    letter-spacing: 0.5px,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-base,
+    letter-spacing: 0.5px, //! No exact token - 0.031em
+    font-weight: typ-tokens.$font-weight-regular,
   ),
   $styles-subtitle2: (
-    font-size: 0.875rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-sm,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0.5px,
   ),
   $styles-body1: (
-    font-size: 1rem,
+    font-size: typ-tokens.$font-size-base,
     letter-spacing: 0.5px,
-    font-weight: normal,
+    font-weight: typ-tokens.$font-weight-regular,
   ),
   $styles-body2: (
-    font-size: 0.875rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-sm,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0.5px,
   ),
   $styles-button: (
     text-transform: none,
-    font-size: 1rem,
+    font-size: typ-tokens.$font-size-base,
     letter-spacing: 0.5px,
     white-space: nowrap,
     text-overflow: ellipsis,
-    font-weight: 400,
+    font-weight: typ-tokens.$font-weight-regular, //this was 400 - normal should be 400 also
   ),
   $styles-caption: (
     letter-spacing: 0,
   ),
   $styles-overline: (
-    font-size: 0.75rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-xs,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0,
   )
 );
 
 // Material Shape
 @use "@material/shape" with (
-  $small-component-radius: 3px,
-  $medium-component-radius: 3px,
-  $large-component-radius: 3px
+  $small-component-radius: typ-tokens.$radius-base,
+  $medium-component-radius: typ-tokens.$radius-base,
+  $large-component-radius: typ-tokens.$radius-base
 );
