--- a/light/my-theme.scss
+++ b/light/my-theme.scss
@@ -2,7 +2,8 @@
 // Must be hard-coded for Material mixins
 @use '../node_modules/@astrouxds/design-tokens/dist/scss/colors-global' as tokens;
 @use '../node_modules/@astrouxds/design-tokens/dist/scss/colors-light' as light;
-// @use '~@astrouxds/design-tokens/dist/scss/_colors-global' as tokens;
+@use '../node_modules/@astrouxds/design-tokens/dist/scss/variables' as typ-tokens;
+
 
 
 $background-color: tokens.$color-global-quaternary-200; // --backgroundColor
@@ -54,76 +55,76 @@ $global-app-header-icon: $dark-theme-primary;
 @use "@material/typography" with (
   $font-family: unquote("Roboto, sans-serif"),
   $styles-headline1: (
-    font-size: 2.125rem,
+    font-size: typ-tokens.$font-size-4xl,
     letter-spacing: 0.25px,
-    font-weight: normal,
+    font-weight: typ-tokens.$font-weight-regular,
   ),
   $styles-headline2: (
-    font-size: 1.5rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-2xl,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0,
   ),
   $styles-headline3: (
-    font-size: 1.25rem,
-    font-weight: 500,
+    font-size: typ-tokens.$font-size-xl,
+    font-weight: typ-tokens.$font-weight-medium,
     letter-spacing: 0.15px,
   ),
   $styles-headline4: (
-    font-size: 1.25rem,
-    font-weight: 300,
+    font-size: typ-tokens.$font-size-xl,
+    font-weight: typ-tokens.$font-weight-light,
     letter-spacing: 0.15px,
   ),
   $styles-headline5: (
-    font-size: 1.125rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-lg,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0,
   ),
   $styles-headline6: (
-    font-size: 1.125rem,
-    font-weight: 300,
+    font-size: typ-tokens.$font-size-lg,
+    font-weight: typ-tokens.$font-weight-light,
     letter-spacing: 0,
   ),
   $styles-subtitle1: (
-    font-size: 1rem,
+    font-size: typ-tokens.$font-size-base,
     letter-spacing: 0.5px,
-    font-weight: normal,
+    font-weight: typ-tokens.$font-weight-regular,
   ),
   $styles-subtitle2: (
-    font-size: 0.875rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-sm,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0.5px,
   ),
   $styles-body1: (
-    font-size: 1rem,
+    font-size: typ-tokens.$font-size-base,
     letter-spacing: 0.5px,
-    font-weight: normal,
+    font-weight: typ-tokens.$font-weight-regular,
   ),
   $styles-body2: (
-    font-size: 0.875rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-sm,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0.5px,
   ),
   $styles-button: (
     text-transform: none,
-    font-size: 1rem,
+    font-size: typ-tokens.$font-size-base,
     letter-spacing: 0.5px,
     white-space: nowrap,
     text-overflow: ellipsis,
-    font-weight: 400,
+    font-weight: typ-tokens.$font-weight-regular,
   ),
   $styles-caption: (
     letter-spacing: 0,
   ),
   $styles-overline: (
-    font-size: 0.75rem,
-    font-weight: normal,
+    font-size: typ-tokens.$font-size-xs,
+    font-weight: typ-tokens.$font-weight-regular,
     letter-spacing: 0,
   )
 );
 
 // Material Shape
 @use "@material/shape" with (
-  $small-component-radius: 3px,
-  $medium-component-radius: 3px,
-  $large-component-radius: 3px
+  $small-component-radius: typ-tokens.$radius-base,
+  $medium-component-radius: typ-tokens.$radius-base,
+  $large-component-radius: typ-tokens.$radius-base
 );
