--- a/light/my-theme.scss
+++ b/light/my-theme.scss
@@ -1,8 +1,8 @@
 // Theme Colors
 // Must be hard-coded for Material mixins
-@use '../node_modules/@astrouxds/design-tokens/dist/scss/colors-global' as tokens;
-@use '../node_modules/@astrouxds/design-tokens/dist/scss/colors-light' as light;
-@use '../node_modules/@astrouxds/design-tokens/dist/scss/variables' as typ-tokens;
+@use './node_modules/@astrouxds/design-tokens/dist/scss/colors-global' as tokens;
+@use './node_modules/@astrouxds/design-tokens/dist/scss/colors-light' as light;
+@use './node_modules/@astrouxds/design-tokens/dist/scss/variables' as typ-tokens;
 
 
 
